--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack-package-loaders-plugin",
-  "version": "2.1.7",
-  "description": "Webpack plugin which applies loaders defined in package.json",
+  "name": "webpack-browserify-transform-loaders-plugin",
+  "version": "1.0.0",
+  "description": "Webpack plugin which applies browserify transforms defined in package.json",
   "main": "lib/index.js",
   "devDependencies": {
     "babel": "5.6.14",
@@ -11,15 +11,15 @@
     "webpack",
     "webpack-plugin"
   ],
-  "author": "Andrey Popp <8mayday@gmail.com>",
+  "author": "Mark Reeder <mark@arcticflare.com>",
   "repository": {
     "type": "git",
-    "url": "git://github.com/andreypopp/webpack-package-loaders-plugin"
+    "url": "git://github.com/MarkReeder/webpack-browserify-transform-loaders-plugin"
   },
   "bugs": {
-    "url": "https://github.com/andreypopp/webpack-package-loaders-plugin/issues"
+    "url": "https://github.com/MarkReeder/webpack-browserify-transform-loaders-plugin/issues"
   },
-  "homepage": "https://github.com/andreypopp/webpack-package-loaders-plugin",
+  "homepage": "https://github.com/MarkReeder/webpack-browserify-transform-loaders-plugin",
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "5.6.15",
